added poker card pics so they show in the correct location

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,6 +27,8 @@
 <div class="card"></div> -->
 </div>
 
+<!-- <img src="https://cdn.pixabay.com/photo/2012/04/11/13/52/spades-28320__340.png"> -->
+
 <h3>About the Developer</h3>
 <p>APNAPLATES</p>
 <P>FACEBOOK</P>
