added RESET button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -25,6 +25,7 @@
 <div class="card"></div>
 <div class="card"></div>
 <div class="card"></div> -->
+<!-- <button class="reset-button" type="button">RESET</button> -->
 </div>
 
 <h3>About the Developer</h3>
